# eudamed2firstbase

./: .gitignore  .swagger_cache_catalogue.json  .swagger_cache_product.json  CLAUDE.md  Cargo.toml  README.md  bundle_macos.sh  config.sample.toml  config.toml  download.sh  download_10k.sh  download_details.sh  entitlements-appstore.plist  entitlements.plist  firstbase_validation.py  generate_screenshots.py  generate_screenshots_windows.py  last_session  mapping_gaps_1n.csv  push_to_api.sh  push_to_firstbase.sh  push_to_swissdamed.sh  resume
assets/: icon.icns
bugs/: EUDAMED BR-UDID-073 Bug Report.12.03.2026.md  EUDAMED Data Quality MDR Class III missing certificate.12.03.2026.md  EUDAMED Data Quality ON_MARKET without countries.12.03.2026.md  EUDAMED Data Quality null MDR booleans.12.03.2026.md  EUDAMED GS1 097.039 NOT_INTENDED_FOR_EU_MARKET rejection.12.03.2026.md  INDEX.md  TEMPLATE.md
docs/: gui-modes.html  legacy-global-model.html  push-log-env-segregation.html  version-tracking.html
maik/: CIN_7612345000435_07612345780313_097.json  CIN_7612345000435_07612345780313_097_.xml  EUDAMED2GDSN_backward_mapping_challenges.txt  EUDAMED_APP-DTX-000084634.xml  GS1_UDI_Connector_Profile_Overview_2026_02-27_zdavatz.xlsx  GS1_UDI_Connector_Profile_Overview_Apr_2026_V1.1_notForPublicSharing.xlsx
src/: actors.rs  api_detail.rs  api_json.rs  config.rs  download.rs  eudamed.rs  eudamed_json.rs  firstbase.rs  gui.rs  installer.rs  mail.rs  main.rs  mappings.rs  scan.rs  sheet.rs  swissdamed.rs  transform.rs  transform_api.rs  transform_detail.rs  transform_eudamed_json.rs  update.rs  version_db.rs  whatsapp.rs  xlsx_export.rs
whatsapp/: .gitignore  fetch-media.mjs  grab-media.mjs  list-contacts.mjs  list-groups.mjs  package.json  read-new.mjs  send-text.mjs  (+2 more)
(+22985 files in other folders)
