[package]
name = "eudamed2firstbase"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
toml = "0.8"
regex = "1"
roxmltree = "0.20"
uuid = { version = "1", features = ["v4"] }
rust_xlsxwriter = "0.82"
rayon = "1.10"
ureq = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
